Various patches are applied.
Patch 8
    Ignore font size change event

Patch 7
    Update visible state when it is created.

Patch 6
    If the provider is paused, newly create box should be paused too.
    After creating a new box instance, check the status of current provider.
    And update the status of newly created box too.

Patch 5
    Add CLCICKED log for estimating launch time.

Patch 4
    Add shadow image and remove text shadow

Patch 3
    Update icon edc file.

Patch 2
    Change the color of text shadow.

Patch 1
    Implement the icon service provider.

    Patch #1
       Icon service provider will generate the requested image file.
       Using given edje & descfile.

       After load the edje file, the provider will start parse the desc file
       to fill the content of loaded edje object.

    Patch #2
       Add edje layout file for creating icon image using it.

    Patch #3
       Add 2x1, 2x2, 4x1, 4x2, 4x3, 4x4, 4x5, 4x6 icon layout

    Patch #4
       Fix bugs.

Change-Id: Ieac9854fcf49f0dbaed378a564782673ff1fd974

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,8 @@ pkg_check_modules(pkg REQUIRED
 	livebox
 	elementary
 	capi-system-system-settings
+	com-core
+	shortcut
 )
 
 SET(PACKAGE "${PROJECT_NAME}")
@@ -66,11 +68,20 @@ ADD_EXECUTABLE(${PROJECT_NAME}
 )
 
 TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${pkg_LDFLAGS} "-ldl")
+
+ADD_EXECUTABLE(icon-provider-slave
+	icon_src/main.c
+	icon_src/script_handler.c
+	src/util.c
+)
+TARGET_LINK_LIBRARIES("icon-provider-slave" ${pkg_LDFLAGS} "-ldl")
+
 #INSTALL(FILES ${CMAKE_SOURCE_DIR}/org.tizen.data-provider-slave.desktop DESTINATION /usr/share/applications)
 INSTALL(FILES ${CMAKE_SOURCE_DIR}/org.tizen.data-provider-slave.xml DESTINATION /usr/share/packages)
 INSTALL(FILES ${CMAKE_SOURCE_DIR}/LICENSE DESTINATION /usr/share/license RENAME "org.tizen.${PROJECT_NAME}")
 INSTALL(TARGETS ${PROJECT_NAME} DESTINATION /usr/apps/org.tizen.${PROJECT_NAME}/bin PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
 INSTALL(FILES ${CMAKE_SOURCE_DIR}/org.tizen.data-provider-slave.rule DESTINATION /etc/smack/accesses.d)
+INSTALL(TARGETS "icon-provider-slave" DESTINATION /usr/apps/org.tizen.${PROJECT_NAME}/bin PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
 
 # INCLUDE FOR BUILD & INSTALL .PO FILES
 ADD_SUBDIRECTORY(res)
