Do not sucide. master will care the icon provider
Change-Id: I9463e46c7390d261d66b24d9ddeb654d33e993bd

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,9 +54,27 @@ ADD_DEFINITIONS("-D_USE_ECORE_TIME_GET")
 
 ADD_DEFINITIONS(${pkg_CFLAGS})
 
+FOREACH(flag ${pkg_CFLAGS})
+	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
+	SET(EXTRA_CXXFLAGS "${EXTRA_CXXFLAGS} ${flag}")
+ENDFOREACH(flag)
+
+SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS} -Wall")
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${EXTRA_CXXFLAGS} -Wall")
+
 # -fpie
 SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Winline -Werror -g -fno-builtin-malloc")
 #SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -pie")
+
+SET(EXTRA_LDFLAGS "-ldl")
+FOREACH(flag ${pkg_LDFLAGS})
+	IF (flag STREQUAL -L)
+		MESSAGE("Ignore -L")
+	ELSE()
+		SET(EXTRA_LDFLAGS "${EXTRA_LDFLAGS} ${flag}")
+	ENDIF()
+ENDFOREACH(flag)
+SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${EXTRA_LDFLAGS}")
 
 ADD_EXECUTABLE("${PROJECT_NAME}.loader"
 	src/main.c
@@ -69,19 +87,19 @@ ADD_EXECUTABLE("${PROJECT_NAME}.loader"
 	src/client.c
 	src/critical_log.c
 )
-TARGET_LINK_LIBRARIES("${PROJECT_NAME}.loader" ${pkg_LDFLAGS} "-ldl")
+TARGET_LINK_LIBRARIES("${PROJECT_NAME}.loader" ${EXTRA_LDFLAGS})
 
 ADD_EXECUTABLE(${ICON_PROVIDER}
 	icon_src/main.c
 	icon_src/script_handler.c
 	src/util.c
 )
-TARGET_LINK_LIBRARIES(${ICON_PROVIDER} ${pkg_LDFLAGS} "-ldl")
+TARGET_LINK_LIBRARIES(${ICON_PROVIDER} ${EXTRA_LDFLAGS})
 
 ADD_EXECUTABLE(${EXE_LOADER}
 	stub/main.c
 )
-TARGET_LINK_LIBRARIES(${EXE_LOADER} ${pkg_LDFLAGS} "-ldl")
+TARGET_LINK_LIBRARIES(${EXE_LOADER} ${EXTRA_LDFLAGS})
 
 #INSTALL(FILES ${CMAKE_SOURCE_DIR}/org.tizen.data-provider-slave.desktop DESTINATION /usr/share/applications)
 INSTALL(FILES ${CMAKE_SOURCE_DIR}/org.tizen.data-provider-slave.xml DESTINATION /usr/share/packages)
