--- a/data/CMakeLists.txt
+++ b/data/CMakeLists.txt
@@ -1,27 +1,21 @@
-IF (MOBILE)
-SET(EDJE_FLAGS "-DMOBILE")
-ELSE (MOBILE)
-SET(EDJE_FLAGS "-DWERABLE")
-ENDIF (MOBILE)
-
 ADD_CUSTOM_TARGET(icon.edj ALL
-		COMMAND edje_cc -sd ${CMAKE_CURRENT_SOURCE_DIR} -id ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/icon.edc icon.edj ${EDJE_FLAGS}
+		COMMAND edje_cc -sd ${CMAKE_CURRENT_SOURCE_DIR} -id ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/icon.edc icon.edj
 		DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/icon.edc
 )
 ADD_DEPENDENCIES(${PROJECT_NAME} icon_font.edj)
 ADD_CUSTOM_TARGET(icon_font.edj ALL
-		COMMAND edje_cc -sd ${CMAKE_CURRENT_SOURCE_DIR} -id ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/icon_font.edc icon_font.edj ${EDJE_FLAGS}
+		COMMAND edje_cc -sd ${CMAKE_CURRENT_SOURCE_DIR} -id ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/icon_font.edc icon_font.edj
 		DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/icon_font.edc
 )
 ADD_DEPENDENCIES(${PROJECT_NAME} icon_font.edj)
 
 ADD_CUSTOM_TARGET(icon_effect.edj ALL
-		COMMAND edje_cc -sd ${CMAKE_CURRENT_SOURCE_DIR} -id ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/icon_effect.edc icon_effect.edj ${EDJE_FLAGS}
+		COMMAND edje_cc -sd ${CMAKE_CURRENT_SOURCE_DIR} -id ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/icon_effect.edc icon_effect.edj
 		DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/icon_effect.edc
 )
 ADD_DEPENDENCIES(${PROJECT_NAME} icon_effect.edj)
 ADD_CUSTOM_TARGET(icon_effect_font.edj ALL
-		COMMAND edje_cc -sd ${CMAKE_CURRENT_SOURCE_DIR} -id ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/icon_effect_font.edc icon_effect_font.edj ${EDJE_FLAGS}
+		COMMAND edje_cc -sd ${CMAKE_CURRENT_SOURCE_DIR} -id ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/icon_effect_font.edc icon_effect_font.edj
 		DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/icon_effect_font.edc
 )
 ADD_DEPENDENCIES(${PROJECT_NAME} icon_effect_font.edj)
